hotfix for jumpnav bug in headerless layout, tweaks on footer calc and icon sizing

--- a/assets/targets/components/base/_layout.scss
+++ b/assets/targets/components/base/_layout.scss
@@ -122,6 +122,7 @@ body {
 
     a.social {
       @include rem(border-radius, 3px);
+      @include rem(font-size, 14px);
       @include rem(margin, 0 15px);
       background-color: transparent;
       color: $white;
@@ -136,8 +137,8 @@ body {
       }
 
       .icon {
-        @include rem(height, 34px);
-        @include rem(width, 34px);
+        @include rem(height, 24px);
+        @include rem(width, 24px);
       }
 
       &:hover {
@@ -148,6 +149,7 @@ body {
     }
 
     &.alt {
+      @include rem(padding, 30px 0);
       background-color: $paleblue;
       box-shadow: 0 6px 6px 4px rgba($black, .3);
       color: $black;
