--- a/assets/targets/components/inpage-navigation/_jumpnav.scss
+++ b/assets/targets/components/inpage-navigation/_jumpnav.scss
@@ -120,6 +120,7 @@ body.jumpnav-active {
 
       > header:first-child,
       footer.cta,
+      footer.end,
       footer.contrib {
         margin-left: -300px;
         width: auto;
